# grasp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
.doc/: install.md  setup.md
cfg/: randomiser.yml  randomiser_dr.yml  robots.yml  run_trials.yaml  run_trials.yml  stats.yml
cfg/datasets/: kit.list.yml
cmake/: safeguards.cmake
data/: README.md
datasets/: convert_to_gazebo.py  dexnet_to_gazebo.py  kit_to_gazebo.py  shapenet_to_gazebo.py  ycb_to_gazebo.py
datasets/meshlab/: flip_normals.mlx  scale.mlx
datasets/parametric/Cube/: model.config  model.sdf
datasets/parametric/Sphere/: model.config  model.sdf
datasets/template/: model.config  model.sdf
datasets/ycb/: ycb_to_gazebo.py
datasets/ycb/template/: model.config  model.sdf
doc/: CMakeLists.txt  grasp.in  header.html
examples/: CMakeLists.txt  README.md  contacts_example.cc  contacts_example.hh  hand_remote.cc  hand_remote.hh  target_example.cc  target_example.hh
grasp/: CMakeLists.txt  Grasp.cc  Grasp.hh  Randomiser.cc  Randomiser.hh  RestPose.cc  RestPose.hh  Target.hh  gen_grasps.cc  gen_grasps.hh  gen_renders.cc  gen_renders.hh  gen_rest_poses.cc  gen_rest_poses.hh  object_utils.cc  object_utils.hh  run_trials.cc  run_trials.hh
grasp/config/: kit.dataset.yml  kit.rest.yml  parametric.dataset.yml  reduced.kit.dataset.yml  robots.yml
grasp/scripts/: gen_grasps.py
models/: baxter_extended_round.urdf  baxter_gripper.urdf  baxter_standard_basic.urdf  shadowhand.urdf  shadowhand_lite.urdf  target_box.sdf  vizzy_right_hand.urdf
models/rgbd_camera/: model.config  model.sdf
models/scripts/: gen_model.py  template.urdf
msgs/: CMakeLists.txt  MessageTopics.hh.in  MessageTypes.hh.in  camera_request.proto  camera_response.proto  contact_request.proto  contact_response.proto  contact_sensor_request.proto  contact_sensor_response.proto  dr_request.proto  friction.proto  grasp_msgs.hh  gripper.proto  hand.proto  model_cmd.proto  target.proto  target_request.proto  target_response.proto
plugins/: CMakeLists.txt  ConcurrentQueue.hh  ContactSensorPlugin.cc  ContactSensorPlugin.hh  ContactWorldPlugin.cc  ContactWorldPlugin.hh  DRPlugin.cc  DRPlugin.hh  GripperPlugin.cc  GripperPlugin.hh  HandPlugin.cc  HandPlugin.hh  RGBDCameraPlugin.cc  RGBDCameraPlugin.hh  TargetPlugin.cc  TargetPlugin.hh
scripts/: gen_model.py  stats.py
utils/: CMakeLists.txt  DRInterface.cc  DRInterface.hh  GraspShape.cc  GraspShape.hh  Interface.cc  Interface.hh  contacts_example.cc  contacts_example.hh  debug.hh.in  dr_example.cc  dr_example.hh  gripper_remote.cc  gripper_remote.hh  hand_remote.cc  hand_remote.hh  target_example.cc  topics.hh.in  utils.cc  utils.hh
worlds/: camera.world  contacts.world  dart.world  dart_real_time.world  domain_randomization.world  empty.world  ode.world  render.world  target.world
